# SynCode

./: .dockerignore  .gitignore  pom.xml
.github/workflows/: bootstrap-runner.yml  cd.yml  ci.yml  deploy-swarm.yml  prod-diagnose.yml  prod-recover.yml
deploy/prod/: README.md
docs/: backend-api-reference.md
oj-agent/: .env.local.example  pyproject.toml
tool/question-curation/: .env.example  README.md  pyproject.toml
tool/question-curation/app/: __init__.py  config.py  db.py  dependencies.py  main.py
tool/question-curation/app/models/: __init__.py  candidate.py  dedup_match.py  import_record.py  judge_case.py  remote_db_config.py  review.py  solution.py  source_artifact.py
tool/question-curation/app/routes/: __init__.py  web.py
tool/question-curation/app/schemas/: __init__.py  import_preview.py
tool/question-curation/app/services/: __init__.py  ai_client.py  candidate_service.py  dedup_service.py  discovery_service.py  execution_service.py  generation_service.py  importer_service.py  oj_reader.py  remote_db_config_service.py  review_pack_service.py
tool/question-curation/app/static/: app.css
tool/question-curation/app/templates/: base.html  candidate_detail.html  candidate_list.html  dashboard.html  database_settings.html  discover.html
tool/question-curation/tests/: conftest.py  test_app_smoke.py  test_candidate_service.py  test_dedup_service.py  test_discovery_service.py  test_execution_service.py  test_generation_service.py  test_importer_service.py  test_oj_reader.py  test_remote_db_config_service.py  test_review_pack_service.py
(+616 files in other folders)
